Edited position left on ch-image to avoid horizontal scroll in 320px

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -647,7 +647,7 @@ html {
               overflow: hidden;
               width: 88%;
               position: relative;
-              left: 40px;
+              left: 38px;
             }
           }
         }
